--- a/src/Common/Navbar/Navbar.css
+++ b/src/Common/Navbar/Navbar.css
@@ -9,8 +9,8 @@ img {
 }
 
 .navbar-wrapper {
-  background-color: transparent;
-  position: fixed;
+  background-color: #1e1c1e;
+  top: 0;
   width: 100%;
   padding: 1rem 0;
   -webkit-transition: all 0.5s ease;
@@ -49,7 +49,7 @@ img {
 }
 
 .navbar-wrapper .navbar .lists .list li .link {
-  color: black;
+  color: white;
   font-size: 1.2rem;
 }
 
