--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -1,44 +1,90 @@
 @import "../../Common/Variable/Variable.scss";
 
-.main-banner-wrapper {
-  width: 100%;
-  height: 40rem;
-  background-image: url(../../Assests/Banners/main-banner.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: all 0.5s ease;
+// .main-banner-wrapper {
+//   width: 100%;
+//   height: 40rem;
+//   background-image: url(../../Assests/Banners/main-banner.png);
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   transition: all 0.5s ease;
 
+//   .main-banner {
+//     height: 100%;
+//     display: flex;
+//     align-items: center;
+//     padding-left: 10%;
+
+//     .content {
+//       display: flex;
+//       flex-direction: column;
+//       gap: 1rem;
+//       padding-top: 3rem;
+//       color: white;
+//       h2 {
+//         font-size: 2.5rem;
+//       }
+//       h3 {
+//         font-size: 1.5rem;
+//       }
+//       a {
+//         background-color: $main;
+//         font-size: 1.2rem;
+//         font-weight: 500;
+//         padding: 1rem 1.5rem;
+//         align-self: flex-start;
+//         transition: all 0.5s ease;
+//         border-radius: 5px;
+
+//         &:hover {
+//           background-color: white;
+//           color: $main;
+//         }
+//       }
+//     }
+//   }
+// }
+
+.main-banner-wrappe {
+  padding: 5% 10%;
+  width: 100%;
+  // height: 40rem;
   .main-banner {
-    height: 100%;
     display: flex;
     align-items: center;
-    padding-left: 10%;
+    gap: 3rem;
 
-    .content {
+    .main-image {
+      width: 50%;
+      img {
+        width: 100%;
+      }
+    }
+
+    .main-content {
+      width: 50%;
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      padding-top: 3rem;
-      color: white;
       h2 {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
       }
       h3 {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
       }
       a {
-        background-color: $main;
+        // background-color: $main;
+        color: $main;
         font-size: 1.2rem;
         font-weight: 500;
-        padding: 1rem 1.5rem;
         align-self: flex-start;
         transition: all 0.5s ease;
         border-radius: 5px;
 
         &:hover {
-          background-color: white;
-          color: $main;
+          background-color: $main;
+          color: white;
+          padding: 0.5rem 1rem;
         }
       }
     }
