--- a/src/Pages/SingleLocation/SingleLocation.scss
+++ b/src/Pages/SingleLocation/SingleLocation.scss
@@ -22,6 +22,10 @@
         align-items: center;
         justify-content: space-around;
 
+        @media (max-width: 1000px) {
+          flex-direction: column;
+        }
+
         .property-img {
           //   width: 50%;
           display: flex;
