--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -53,9 +53,15 @@
     display: flex;
     align-items: center;
     gap: 3rem;
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
 
     .main-image {
       width: 50%;
+      @media (max-width: 1000px) {
+        width: 100%;
+      }
       img {
         width: 100%;
       }
@@ -63,6 +69,9 @@
 
     .main-content {
       width: 50%;
+      @media (max-width: 1000px) {
+        width: 100%;
+      }
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -101,11 +110,19 @@
   flex-wrap: wrap;
   padding: 5% 10%;
 
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    width: 100%;
+  }
+
   .info {
     width: 48%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    @media (max-width: 1000px) {
+      width: 100%;
+    }
 
     h2 {
       font-size: 2.2rem;
@@ -139,6 +156,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    @media (max-width: 1000px) {
+      width: 100%;
+    }
     .content-container {
       padding: 1rem;
       background-color: #fff;
