--- a/src/Pages/SingleLocation/SingleLocation.scss
+++ b/src/Pages/SingleLocation/SingleLocation.scss
@@ -64,6 +64,9 @@
             gap: 1rem;
             border: solid 3px #eee;
             padding: 0rem 2rem;
+            @media (max-width: 500px) {
+              gap: 0.5rem;
+            }
             .icon {
               display: flex;
               flex-direction: column;
