--- a/src/Common/Navbar/Navbar.css
+++ b/src/Common/Navbar/Navbar.css
@@ -4,6 +4,13 @@ p {
   line-height: 2rem;
 }
 
+@media (max-width: 500px) {
+  p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
 img {
   width: 100%;
 }
