--- a/src/Common/Variable/Variable.scss
+++ b/src/Common/Variable/Variable.scss
@@ -5,6 +5,10 @@ p {
   color: $para;
   font-size: 1.2rem;
   line-height: 2rem;
+  @media (max-width: 500px) {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 img {
