--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -49,6 +49,10 @@
   padding: 5% 10%;
   width: 100%;
   // height: 40rem;
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
+
   .main-banner {
     display: flex;
     align-items: center;
@@ -76,10 +80,17 @@
       flex-direction: column;
       gap: 1rem;
       h2 {
-        font-size: 2.2rem;
+        font-size: 2.4rem;
+        @media (max-width: 500px) {
+          font-size: 1.5rem;
+        }
       }
       h3 {
-        font-size: 1.2rem;
+        font-size: 1.4rem;
+        font-weight: 400;
+        @media (max-width: 500px) {
+          font-size: 1rem;
+        }
       }
       a {
         // background-color: $main;
@@ -110,6 +121,10 @@
   flex-wrap: wrap;
   padding: 5% 10%;
 
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
+
   @media (max-width: 1000px) {
     flex-direction: column;
     width: 100%;
@@ -123,10 +138,15 @@
     @media (max-width: 1000px) {
       width: 100%;
     }
+    @media (max-width: 500px) {
+      gap: 0.5rem;
+    }
 
     h2 {
       font-size: 2.2rem;
-
+      @media (max-width: 500px) {
+        font-size: 1.6rem;
+      }
       span {
         color: $main;
       }
@@ -142,6 +162,9 @@
       padding: 1rem;
       color: white;
       border-radius: 5px;
+      @media (max-width: 500px) {
+        padding: 0.5rem;
+      }
 
       &:hover {
         background-color: white;
@@ -167,13 +190,23 @@
       gap: 1rem;
       .icon {
         min-width: 4rem;
+        font-size: 3rem;
+        @media (max-width: 500px) {
+          min-width: 3rem;
+        }
         svg {
           font-size: 3rem;
+          @media (max-width: 500px) {
+            font-size: 2rem;
+          }
         }
       }
       .content-info {
         h3 {
           font-size: 1.5rem;
+          @media (max-width: 500px) {
+            font-size: 1.2rem;
+          }
         }
         p {
           font-size: 1rem;
