--- a/src/Pages/SingleLocation/SingleLocation.css
+++ b/src/Pages/SingleLocation/SingleLocation.css
@@ -4,6 +4,13 @@ p {
   line-height: 2rem;
 }
 
+@media (max-width: 500px) {
+  p {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
 img {
   width: 100%;
 }
@@ -108,6 +115,12 @@ img {
   gap: 1rem;
   border: solid 3px #eee;
   padding: 0rem 2rem;
+}
+
+@media (max-width: 500px) {
+  .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .icons {
+    gap: 0.5rem;
+  }
 }
 
 .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .icons .icon {
