--- a/src/Common/Footer/Footer.css
+++ b/src/Common/Footer/Footer.css
@@ -3,28 +3,43 @@
   padding: 3% 10%;
 }
 
+@media (max-width: 500px) {
+  .footer {
+    padding: 3% 5%;
+  }
+}
+
 .footer .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  grid-gap: 2rem;
+  display: -ms-grid;
+  display: grid;
+  gap: 2rem;
+  -ms-grid-columns: (minmax(20rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .footer .top .top-container {
-  max-width: 32%;
+  width: 100%;
   color: white;
 }
 
 .footer .top .top-container h3 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   margin-bottom: 1rem;
+}
+
+@media (max-width: 500px) {
+  .footer .top .top-container h3 {
+    margin-bottom: 0.3rem;
+  }
 }
 
 .footer .top .top-container p,
 .footer .top .top-container a {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 400;
   color: #e0e0e0 !important;
 }
@@ -32,6 +47,12 @@
 .footer .top .top-container ul {
   list-style: none;
   padding-left: 2rem;
+}
+
+@media (max-width: 500px) {
+  .footer .top .top-container ul {
+    padding: 0;
+  }
 }
 
 .footer .top .top-container .links {
@@ -56,6 +77,17 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media (max-width: 700px) {
+  .footer .bottom {
+    gap: 1rem;
+    text-align: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .footer .bottom .info h3 {
