--- a/src/Pages/Locations/Location.css
+++ b/src/Pages/Locations/Location.css
@@ -16,7 +16,73 @@ img {
 }
 
 .locations {
-  padding: 5% 10%;
+  padding: 5% 5%;
+}
+
+.locations .search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 15rem;
+}
+
+.locations .search .heading {
+  text-align: center;
+}
+
+.locations .search .heading h2 {
+  font-size: 2.2rem;
+  margin-bottom: 2rem;
+}
+
+@media (max-width: 500px) {
+  .locations .search .heading h2 {
+    font-size: 1.5rem;
+  }
+}
+
+.locations .search .input {
+  width: 70%;
+  position: relative;
+}
+
+@media (max-width: 700px) {
+  .locations .search .input {
+    width: 100%;
+  }
+}
+
+.locations .search .input input {
+  outline: none;
+  font-size: 1.5rem;
+  width: 100%;
+  border: #3492ff 2px solid;
+  padding: 0.5rem;
+  width: 100%;
+}
+
+.locations .search .input ul {
+  list-style: none;
+  width: 100%;
+  position: absolute;
+  background-color: white;
+  padding: 0 0.5rem;
+  height: 10rem;
+  overflow: scroll;
+  overflow-x: hidden;
+}
+
+.locations .search .input ul li {
+  cursor: pointer;
+  font-size: 1.2rem;
+  padding: 0.2rem;
 }
 
 .locations .content .heading {
