--- a/src/Common/ContactComp/ContactComp.scss
+++ b/src/Common/ContactComp/ContactComp.scss
@@ -52,7 +52,8 @@
         width: 100%;
       }
       @media (max-width: 700px) {
-        padding: 2rem;
+        padding: 0rem;
+        box-shadow: none;
       }
 
       form {
@@ -87,6 +88,10 @@
           font-size: 1.2rem;
           cursor: pointer;
           transition: all 0.5s ease;
+          @media (max-width: 500px) {
+            padding: 0.5rem 1rem;
+            font-size: 1rem;
+          }
 
           &:hover {
             background-color: black;
