--- a/src/Common/Navbar/Navbar.css
+++ b/src/Common/Navbar/Navbar.css
@@ -43,11 +43,19 @@ img {
   padding: 0rem 3rem;
 }
 
-.navbar-wrapper .navbar .logo {
-  width: 8rem;
+@media (max-width: 1000px) {
+  .navbar-wrapper .navbar {
+    padding: 0 0.5rem;
+  }
 }
 
-@media (max-width: 700px) {
+.navbar-wrapper .navbar .logo {
+  width: 8rem;
+  -webkit-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+}
+
+@media (max-width: 1000px) {
   .navbar-wrapper .navbar .logo {
     width: 4rem;
   }
@@ -70,6 +78,56 @@ img {
 .navbar-wrapper .navbar .lists .list li .link {
   color: white;
   font-size: 1.2rem;
+  position: relative;
+}
+
+.navbar-wrapper .navbar .lists .list li .link .sublinks {
+  border-top: 2px solid #3492ff;
+  background-color: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: black;
+  -webkit-box-shadow: 0px 0px 40px -20px black;
+          box-shadow: 0px 0px 40px -20px black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  left: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  top: 100%;
+  z-index: 11;
+  list-style-type: none;
+  visibility: hidden;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transform-origin: 0 0 0;
+          transform-origin: 0 0 0;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.navbar-wrapper .navbar .lists .list li .link .sublinks li {
+  padding: 0.5rem 1rem;
+  font-weight: 400;
+  border-bottom: solid 1px #e9e9e9;
+}
+
+.navbar-wrapper .navbar .lists .list li .link .sublinks li:hover {
+  background-color: #3492ff;
+  color: white;
+}
+
+.navbar-wrapper .navbar .lists .list li .link .sublinks.active {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  opacity: 1;
+  visibility: visible;
 }
 
 .navbar-wrapper .navbar .lists .list li .link:hover {
@@ -104,5 +162,106 @@ img {
     display: -ms-flexbox;
     display: flex;
   }
+}
+
+.nav-mob-res {
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  .nav-mob-res {
+    display: block;
+  }
+}
+
+.nav-mob-res .mob-nav {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.5s linear;
+  transition: max-height 0.5s linear;
+}
+
+.nav-mob-res .mob-nav.active {
+  max-height: 60rem;
+  opacity: 1;
+}
+
+.nav-mob-res .mob-nav li {
+  padding: 0.5rem 1rem;
+  border-bottom: 2px solid #eee;
+}
+
+.nav-mob-res .mob-nav li .link {
+  color: black;
+  font-size: 1.2rem;
+  position: relative;
+}
+
+.nav-mob-res .mob-nav li .link .sublinks {
+  border-top: 2px solid #3492ff;
+  background-color: white;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: black;
+  -webkit-box-shadow: 0px 0px 40px -20px black;
+          box-shadow: 0px 0px 40px -20px black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  left: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  top: 100%;
+  z-index: 11;
+  list-style-type: none;
+  visibility: hidden;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transform-origin: 0 0 0;
+          transform-origin: 0 0 0;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.nav-mob-res .mob-nav li .link .sublinks li {
+  padding: 0.5rem 1rem;
+  font-weight: 400;
+  border-bottom: solid 1px #e9e9e9;
+}
+
+.nav-mob-res .mob-nav li .link .sublinks li:hover {
+  background-color: #3492ff;
+  color: white;
+}
+
+.nav-mob-res .mob-nav li .link .sublinks.active {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  opacity: 1;
+  visibility: visible;
+}
+
+.nav-mob-res .mob-nav li .link:hover {
+  color: #3492ff;
+}
+
+.nav-mob-res .mob-nav li .link.active {
+  color: #3492ff;
 }
 /*# sourceMappingURL=Navbar.css.map */
