--- a/src/Common/Navbar/Navbar.scss
+++ b/src/Common/Navbar/Navbar.scss
@@ -22,10 +22,14 @@
     align-items: center;
     justify-content: space-between;
     padding: 0rem 3rem;
+    @media (max-width: 1000px) {
+      padding: 0 0.5rem;
+    }
 
     .logo {
       width: 8rem;
-      @media (max-width: 700px) {
+      transition: all ease 0.5s;
+      @media (max-width: 1000px) {
         width: 4rem;
       }
     }
@@ -43,6 +47,44 @@
           .link {
             color: white;
             font-size: 1.2rem;
+            position: relative;
+
+            .sublinks {
+              border-top: 2px solid $main;
+              background-color: white;
+              width: max-content;
+              color: black;
+              box-shadow: 0px 0px 40px -20px rgb(0, 0, 0);
+              display: flex;
+              left: 0;
+              flex-direction: column;
+              position: absolute;
+              top: 100%;
+              z-index: 11;
+              list-style-type: none;
+              visibility: hidden;
+              transform: scaleY(0);
+              transform-origin: 0 0 0;
+              opacity: 0;
+              transition: all 0.5s ease;
+
+              li {
+                padding: 0.5rem 1rem;
+                font-weight: 400;
+                border-bottom: solid 1px #e9e9e9;
+
+                &:hover {
+                  background-color: $main;
+                  color: white;
+                }
+              }
+            }
+
+            .sublinks.active {
+              transform: scaleY(1);
+              opacity: 1;
+              visibility: visible;
+            }
 
             &:hover {
               color: $main;
@@ -77,6 +119,83 @@
 
         @media (max-width: 1000px) {
           display: flex;
+        }
+      }
+    }
+  }
+}
+
+.nav-mob-res {
+  position: absolute;
+  background-color: white;
+  width: 100%;
+  display: none;
+  @media (max-width: 1000px) {
+    display: block;
+  }
+  .mob-nav {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s linear;
+    &.active {
+      max-height: 60rem;
+      opacity: 1;
+    }
+
+    li {
+      padding: 0.5rem 1rem;
+      border-bottom: 2px solid #eee;
+      .link {
+        color: black;
+        font-size: 1.2rem;
+        position: relative;
+
+        .sublinks {
+          border-top: 2px solid $main;
+          background-color: white;
+          width: max-content;
+          color: black;
+          box-shadow: 0px 0px 40px -20px rgb(0, 0, 0);
+          display: flex;
+          left: 0;
+          flex-direction: column;
+          position: absolute;
+          top: 100%;
+          z-index: 11;
+          list-style-type: none;
+          visibility: hidden;
+          transform: scaleY(0);
+          transform-origin: 0 0 0;
+          opacity: 0;
+          transition: all 0.5s ease;
+
+          li {
+            padding: 0.5rem 1rem;
+            font-weight: 400;
+            border-bottom: solid 1px #e9e9e9;
+
+            &:hover {
+              background-color: $main;
+              color: white;
+            }
+          }
+        }
+
+        .sublinks.active {
+          transform: scaleY(1);
+          opacity: 1;
+          visibility: visible;
+        }
+
+        &:hover {
+          color: $main;
+        }
+
+        &.active {
+          color: $main;
         }
       }
     }
