--- a/src/Common/Banner/Banner.scss
+++ b/src/Common/Banner/Banner.scss
@@ -18,6 +18,9 @@
         font-weight: 700;
         margin-bottom: 1rem;
         z-index: 10;
+        @media (max-width: 500px) {
+          font-size: 2.5rem;
+        }
       }
 
       .buttons {
