--- a/src/Common/ContactComp/ContactComp.css
+++ b/src/Common/ContactComp/ContactComp.css
@@ -1,13 +1,23 @@
 p {
   color: rgba(0, 0, 0, 0.5);
-  font-size: 1.2rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.7rem;
 }
 
 @media (max-width: 500px) {
   p {
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.5rem;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+@media (max-width: 500px) {
+  h2 {
+    font-size: 1.5rem;
   }
 }
 
@@ -64,9 +74,9 @@ img {
   font-weight: 700;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 500px) {
   .contact-comp-wrapper .contact-comp .heading h2 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 }
 
