--- a/src/Common/Footer/Footer.scss
+++ b/src/Common/Footer/Footer.scss
@@ -31,9 +31,12 @@
       }
       p,
       a {
-        font-size: 1rem;
+        font-size: 0.9rem;
         font-weight: 400;
         color: rgb(224, 224, 224) !important;
+        @media (max-width: 500px) {
+          font-size: 0.8rem;
+        }
       }
 
       ul {
