--- a/src/Common/Navbar/Navbar.css
+++ b/src/Common/Navbar/Navbar.css
@@ -1,13 +1,23 @@
 p {
   color: rgba(0, 0, 0, 0.5);
-  font-size: 1.2rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.7rem;
 }
 
 @media (max-width: 500px) {
   p {
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.5rem;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+@media (max-width: 500px) {
+  h2 {
+    font-size: 1.5rem;
   }
 }
 
@@ -164,11 +174,18 @@ img {
   }
 }
 
+@media (max-width: 500px) {
+  .navbar-wrapper .navbar .lists svg {
+    font-size: 1.5rem;
+  }
+}
+
 .nav-mob-res {
   position: absolute;
   background-color: white;
   width: 100%;
   display: none;
+  z-index: 100;
 }
 
 @media (max-width: 1000px) {
@@ -197,71 +214,32 @@ img {
   opacity: 1;
 }
 
-.nav-mob-res .mob-nav li {
+.nav-mob-res .mob-nav a li {
   padding: 0.5rem 1rem;
   border-bottom: 2px solid #eee;
 }
 
-.nav-mob-res .mob-nav li .link {
-  color: black;
-  font-size: 1.2rem;
-  position: relative;
-}
-
-.nav-mob-res .mob-nav li .link .sublinks {
-  border-top: 2px solid #3492ff;
-  background-color: white;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  color: black;
-  -webkit-box-shadow: 0px 0px 40px -20px black;
-          box-shadow: 0px 0px 40px -20px black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  left: 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: absolute;
-  top: 100%;
-  z-index: 11;
-  list-style-type: none;
-  visibility: hidden;
-  -webkit-transform: scaleY(0);
-          transform: scaleY(0);
-  -webkit-transform-origin: 0 0 0;
-          transform-origin: 0 0 0;
-  opacity: 0;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-.nav-mob-res .mob-nav li .link .sublinks li {
-  padding: 0.5rem 1rem;
-  font-weight: 400;
-  border-bottom: solid 1px #e9e9e9;
-}
-
-.nav-mob-res .mob-nav li .link .sublinks li:hover {
+.nav-mob-res .mob-nav a li:hover {
   background-color: #3492ff;
   color: white;
 }
 
-.nav-mob-res .mob-nav li .link .sublinks.active {
-  -webkit-transform: scaleY(1);
-          transform: scaleY(1);
+.nav-mob-res .mob-nav a .mob-sub-list {
+  padding-left: 3rem;
+  list-style: none;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.5s linear;
+  transition: max-height 0.5s linear;
+}
+
+.nav-mob-res .mob-nav a .mob-sub-list.active {
+  max-height: 60rem;
   opacity: 1;
-  visibility: visible;
 }
 
-.nav-mob-res .mob-nav li .link:hover {
-  color: #3492ff;
-}
-
-.nav-mob-res .mob-nav li .link.active {
-  color: #3492ff;
+.nav-mob-res .mob-nav a.active {
+  background-color: #3492ff;
+  color: white;
 }
 /*# sourceMappingURL=Navbar.css.map */
