--- a/src/Common/Navbar/Navbar.scss
+++ b/src/Common/Navbar/Navbar.scss
@@ -120,6 +120,9 @@
         @media (max-width: 1000px) {
           display: flex;
         }
+        @media (max-width: 500px) {
+          font-size: 1.5rem;
+        }
       }
     }
   }
@@ -130,6 +133,7 @@
   background-color: white;
   width: 100%;
   display: none;
+  z-index: 100;
   @media (max-width: 1000px) {
     display: block;
   }
@@ -145,59 +149,87 @@
       opacity: 1;
     }
 
-    li {
-      padding: 0.5rem 1rem;
-      border-bottom: 2px solid #eee;
-      .link {
-        color: black;
-        font-size: 1.2rem;
-        position: relative;
-
-        .sublinks {
-          border-top: 2px solid $main;
-          background-color: white;
-          width: max-content;
-          color: black;
-          box-shadow: 0px 0px 40px -20px rgb(0, 0, 0);
-          display: flex;
-          left: 0;
-          flex-direction: column;
-          position: absolute;
-          top: 100%;
-          z-index: 11;
-          list-style-type: none;
-          visibility: hidden;
-          transform: scaleY(0);
-          transform-origin: 0 0 0;
-          opacity: 0;
-          transition: all 0.5s ease;
-
-          li {
-            padding: 0.5rem 1rem;
-            font-weight: 400;
-            border-bottom: solid 1px #e9e9e9;
-
-            &:hover {
-              background-color: $main;
-              color: white;
-            }
-          }
-        }
-
-        .sublinks.active {
-          transform: scaleY(1);
-          opacity: 1;
-          visibility: visible;
-        }
-
+    a {
+      li {
+        padding: 0.5rem 1rem;
+        border-bottom: 2px solid #eee;
         &:hover {
-          color: $main;
-        }
-
-        &.active {
-          color: $main;
+          background-color: $main;
+          color: white;
         }
       }
+      .mob-sub-list {
+        padding-left: 3rem;
+        list-style: none;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.5s linear;
+        &.active {
+          max-height: 60rem;
+          opacity: 1;
+        }
+      }
+
+      &.active {
+        background-color: $main;
+        color: white;
+      }
+    }
+
+    li {
+      // .link {
+      //   color: black;
+      //   background-color: $main;
+
+      //   font-size: 1.2rem;
+      //   position: relative;
+
+      //   .sublinks {
+      //     border-top: 2px solid $main;
+      //     background-color: white;
+      //     width: max-content;
+      //     color: black;
+      //     box-shadow: 0px 0px 40px -20px rgb(0, 0, 0);
+      //     display: flex;
+      //     left: 0;
+      //     flex-direction: column;
+      //     position: absolute;
+      //     top: 100%;
+      //     z-index: 11;
+      //     list-style-type: none;
+      //     visibility: hidden;
+      //     transform: scaleY(0);
+      //     transform-origin: 0 0 0;
+      //     opacity: 0;
+      //     transition: all 0.5s ease;
+
+      //     li {
+      //       padding: 0.5rem 1rem;
+      //       font-weight: 400;
+      //       border-bottom: solid 1px #e9e9e9;
+
+      //       &:hover {
+      //         background-color: $main;
+      //         color: white;
+      //       }
+      //     }
+      //   }
+
+      //   .sublinks.active {
+      //     transform: scaleY(1);
+      //     opacity: 1;
+      //     visibility: visible;
+      //   }
+
+      //   &:hover {
+      //     color: $main;
+      //   }
+
+      //   &.active {
+      //     background-color: $main;
+      //     color: $main;
+      //   }
+      // }
     }
   }
 }
