--- a/src/Common/Variable/Variable.scss
+++ b/src/Common/Variable/Variable.scss
@@ -4,11 +4,18 @@ $whatsapp: #25d365;
 
 p {
   color: $para;
-  font-size: 1.2rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.7rem;
   @media (max-width: 500px) {
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.5rem;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+  @media (max-width: 500px) {
+    font-size: 1.5rem;
   }
 }
 
