--- a/src/Pages/AddProperty/AddProperty.css
+++ b/src/Pages/AddProperty/AddProperty.css
@@ -1,13 +1,23 @@
 p {
   color: rgba(0, 0, 0, 0.5);
-  font-size: 1.2rem;
-  line-height: 2rem;
+  font-size: 1rem;
+  line-height: 1.7rem;
 }
 
 @media (max-width: 500px) {
   p {
-    font-size: 1rem;
+    font-size: 0.8rem;
     line-height: 1.5rem;
+  }
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+@media (max-width: 500px) {
+  h2 {
+    font-size: 1.5rem;
   }
 }
 
@@ -19,8 +29,30 @@ img {
   padding: 5% 10%;
 }
 
+@media (max-width: 500px) {
+  .addproperty {
+    padding: 5% 5%;
+  }
+}
+
 .addproperty .info h2 {
   font-size: 2.2rem;
+}
+
+@media (max-width: 500px) {
+  .addproperty .info h2 {
+    font-size: 1.5rem;
+  }
+}
+
+.addproperty .info p {
+  margin-top: 1rem;
+}
+
+@media (max-width: 500px) {
+  .addproperty .info p {
+    font-size: 0.9rem;
+  }
 }
 
 .addproperty .info form {
@@ -46,6 +78,13 @@ img {
   font-size: 1rem;
 }
 
+@media (max-width: 500px) {
+  .addproperty .info form input,
+  .addproperty .info form textarea {
+    font-size: 0.8rem;
+  }
+}
+
 .addproperty .info form textarea {
   height: 8rem;
 }
@@ -61,6 +100,12 @@ img {
   cursor: pointer;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+}
+
+@media (max-width: 500px) {
+  .addproperty .info form button {
+    padding: 0.6rem 1.2rem;
+  }
 }
 
 .addproperty .info form button:hover {
