--- a/src/Pages/AddProperty/AddProperty.scss
+++ b/src/Pages/AddProperty/AddProperty.scss
@@ -2,10 +2,23 @@
 
 .addproperty {
   padding: 5% 10%;
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
 
   .info {
     h2 {
       font-size: 2.2rem;
+      @media (max-width: 500px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    p {
+      margin-top: 1rem;
+      @media (max-width: 500px) {
+        font-size: 0.9rem;
+      }
     }
 
     form {
@@ -23,6 +36,9 @@
         background-color: rgb(251, 251, 251);
         border-radius: 5px;
         font-size: 1rem;
+        @media (max-width: 500px) {
+          font-size: 0.8rem;
+        }
       }
 
       textarea {
@@ -38,6 +54,9 @@
         font-size: 1.2rem;
         cursor: pointer;
         transition: all 0.5s ease;
+        @media (max-width: 500px) {
+          padding: 0.6rem 1.2rem;
+        }
 
         &:hover {
           background-color: black;
