--- a/src/Pages/Locations/Location.scss
+++ b/src/Pages/Locations/Location.scss
@@ -34,6 +34,9 @@
         border: $main 2px solid;
         padding: 0.5rem;
         width: 100%;
+        @media (max-width: 500px) {
+          font-size: 1rem;
+        }
       }
 
       ul {
@@ -49,6 +52,9 @@
         li {
           cursor: pointer;
           font-size: 1.2rem;
+          @media (max-width: 500px) {
+            font-size: 1rem;
+          }
           padding: 0.2rem;
         }
       }
@@ -60,6 +66,9 @@
       margin-bottom: 1rem;
       h2 {
         font-size: 2rem;
+        @media (max-width: 500px) {
+          font-size: 1.5rem;
+        }
       }
     }
 
@@ -77,11 +86,17 @@
         }
         svg {
           font-size: 1.5rem;
+          @media (max-width: 500px) {
+            font-size: 1rem;
+          }
         }
 
         a {
           span {
             font-size: 1.5rem;
+            @media (max-width: 500px) {
+              font-size: 1rem;
+            }
           }
         }
       }
