--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -93,18 +93,22 @@
         }
       }
       a {
-        // background-color: $main;
-        color: $main;
-        font-size: 1.2rem;
+        background-color: $main;
+        color: white;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
         font-weight: 500;
         align-self: flex-start;
         transition: all 0.5s ease;
-        border-radius: 5px;
+
+        @media (max-width: 500px) {
+          font-size: 0.9rem;
+        }
 
         &:hover {
-          background-color: $main;
-          color: white;
-          padding: 0.5rem 1rem;
+          transform: translateY(-7px);
+          // box-shadow: 0px 0px 10px 0px $main;
+          background-color: black;
         }
       }
     }
@@ -143,10 +147,6 @@
     }
 
     h2 {
-      font-size: 2.2rem;
-      @media (max-width: 500px) {
-        font-size: 1.6rem;
-      }
       span {
         color: $main;
       }
@@ -158,18 +158,21 @@
 
     a {
       background-color: $main;
-      align-self: flex-start;
-      padding: 1rem;
       color: white;
-      border-radius: 5px;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      font-weight: 500;
+      align-self: flex-start;
+      transition: all 0.5s ease;
+
       @media (max-width: 500px) {
-        padding: 0.5rem;
+        font-size: 0.9rem;
       }
 
       &:hover {
-        background-color: white;
-        color: $main;
-        // box-shadow: 0px 0px 40px -20px rgba(0, 0, 0, 0.5);
+        transform: translateY(-7px);
+        // box-shadow: 0px 0px 10px 0px $main;
+        background-color: black;
       }
     }
   }
@@ -205,13 +208,65 @@
         h3 {
           font-size: 1.5rem;
           @media (max-width: 500px) {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
           }
         }
         p {
           font-size: 1rem;
           line-height: 1.5rem;
+          @media (max-width: 500px) {
+            font-size: 0.8rem;
+          }
         }
+      }
+    }
+  }
+}
+
+.hwhy {
+  // background-color: rgb(213, 213, 255);
+  background-color: rgb(213, 213, 255);
+  padding: 5% 10%;
+
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
+
+  .content {
+    margin-top: 2rem;
+    grid-gap: 2rem;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+
+    .box {
+      background-color: #fff;
+      padding: 2rem 1rem;
+      border-radius: 1rem;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 0.5rem;
+      transition: all 0.5s ease;
+
+      p {
+        line-height: 1.4rem;
+      }
+
+      &:hover {
+        box-shadow: 0px 0px 20px -10px;
+        transform: translateY(-10px);
+      }
+      h3 {
+        color: $main;
+      }
+
+      img {
+        width: 6.5rem;
+        border-radius: 50%;
+        box-shadow: 0px 0px 20px -10px $main;
+        padding: 1rem;
       }
     }
   }
@@ -223,23 +278,37 @@
   gap: 2rem;
   flex-wrap: wrap;
   padding: 5% 10%;
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    width: 100%;
+  }
 
   .img {
     width: 48%;
+    @media (max-width: 1000px) {
+      width: 100%;
+    }
   }
 
   .info {
     width: 48%;
+    @media (max-width: 1000px) {
+      width: 100%;
+    }
     display: flex;
     flex-direction: column;
     gap: 1rem;
     h2 {
-      font-size: 2.2rem;
-      line-height: 2.5rem;
-
       span {
         color: $main;
       }
+    }
+    p {
+      text-align: justify;
     }
   }
 }
