--- a/src/Pages/Owner/Owner.css
+++ b/src/Pages/Owner/Owner.css
@@ -293,7 +293,9 @@ img {
 }
 
 .hwhy {
-  background-color: #d5d5ff;
+  background-image: url(../../Assests/Banners/shape-banner.png);
+  background-position: center;
+  background-size: cover;
   padding: 5% 10%;
 }
 
