--- a/src/Pages/Locations/Location.css
+++ b/src/Pages/Locations/Location.css
@@ -26,7 +26,13 @@ img {
 }
 
 .locations {
-  padding: 5% 5%;
+  padding: 5% 10%;
+}
+
+@media (max-width: 500px) {
+  .locations {
+    padding: 5% 5%;
+  }
 }
 
 .locations .search {
