--- a/src/Common/Navbar/Navbar.css
+++ b/src/Common/Navbar/Navbar.css
@@ -26,7 +26,7 @@ img {
 }
 
 .navbar-wrapper {
-  background-color: #1e1c1e;
+  background-color: white;
   top: 0;
   width: 100%;
   padding: 1rem 0;
@@ -86,7 +86,7 @@ img {
 }
 
 .navbar-wrapper .navbar .lists .list li .link {
-  color: white;
+  color: black;
   font-size: 1.2rem;
   position: relative;
 }
@@ -149,7 +149,7 @@ img {
 }
 
 .navbar-wrapper .navbar .lists .list.home li .link {
-  color: white;
+  color: black;
 }
 
 .navbar-wrapper .navbar .lists .list.home li .link:hover {
