--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -46,8 +46,9 @@
 // }
 
 .main-banner-wrappe {
-  padding: 5% 10%;
+  padding: 2% 5%;
   width: 100%;
+  background-color: black;
   // height: 40rem;
   @media (max-width: 500px) {
     padding: 5% 5%;
@@ -79,6 +80,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      color: white;
       h2 {
         font-size: 2.4rem;
         @media (max-width: 500px) {
@@ -280,6 +282,9 @@
   align-items: center;
   gap: 2rem;
   flex-wrap: wrap;
+  background-image: url(../../Assests/Banners/main.png);
+  background-size: cover;
+  background-position: center;
   padding: 5% 10%;
   @media (max-width: 500px) {
     padding: 5% 5%;
@@ -313,5 +318,28 @@
     p {
       text-align: justify;
     }
+
+    ul {
+      list-style: none;
+      li {
+        font-size: 0.9rem;
+        margin-bottom: 0.5rem;
+
+        span {
+          font-weight: 600;
+        }
+      }
+    }
+  }
+}
+
+.property-slide {
+  padding: 5% 10%;
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
+
+  .swiper-wrapper {
+    display: flex;
   }
 }
