--- a/src/Common/ContactComp/ContactComp.css
+++ b/src/Common/ContactComp/ContactComp.css
@@ -41,15 +41,6 @@ img {
   }
 }
 
-.contact-comp-wrapper .contact-comp {
-  gap: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
 @media (max-width: 900px) {
   .contact-comp-wrapper .contact-comp {
     -webkit-box-orient: vertical;
@@ -60,6 +51,7 @@ img {
 }
 
 .contact-comp-wrapper .contact-comp .heading {
+  margin-bottom: 2rem;
   width: 47%;
 }
 
@@ -91,32 +83,43 @@ img {
   }
 }
 
-.contact-comp-wrapper .contact-comp .form {
+.contact-comp-wrapper .contact-comp .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse;
+  gap: 2rem;
+}
+
+.contact-comp-wrapper .contact-comp .content .form {
   width: 48%;
   background-color: white;
-  min-height: 500px;
   -webkit-box-shadow: 0px 0px 40px -20px rgba(0, 0, 0, 0.5);
           box-shadow: 0px 0px 40px -20px rgba(0, 0, 0, 0.5);
   z-index: 10;
-  border-radius: 30px;
+  border-radius: 5px;
   padding: 3rem;
 }
 
 @media (max-width: 900px) {
-  .contact-comp-wrapper .contact-comp .form {
+  .contact-comp-wrapper .contact-comp .content .form {
     width: 100%;
   }
 }
 
 @media (max-width: 700px) {
-  .contact-comp-wrapper .contact-comp .form {
+  .contact-comp-wrapper .contact-comp .content .form {
     padding: 0rem;
     -webkit-box-shadow: none;
             box-shadow: none;
   }
 }
 
-.contact-comp-wrapper .contact-comp .form form {
+.contact-comp-wrapper .contact-comp .content .form form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -127,7 +130,7 @@ img {
   gap: 2rem;
 }
 
-.contact-comp-wrapper .contact-comp .form form input {
+.contact-comp-wrapper .contact-comp .content .form form input {
   width: 100%;
   height: 2rem;
   padding: 1.8rem 2rem;
@@ -137,7 +140,7 @@ img {
   border-radius: 5px;
 }
 
-.contact-comp-wrapper .contact-comp .form form textarea {
+.contact-comp-wrapper .contact-comp .content .form form textarea {
   padding: 1.8rem 2rem;
   outline: none;
   border: solid 1px #e3e3e3;
@@ -146,7 +149,7 @@ img {
   height: 8rem;
 }
 
-.contact-comp-wrapper .contact-comp .form form button {
+.contact-comp-wrapper .contact-comp .content .form form button {
   -ms-flex-item-align: start;
       align-self: flex-start;
   padding: 1rem 2rem;
@@ -160,36 +163,35 @@ img {
 }
 
 @media (max-width: 500px) {
-  .contact-comp-wrapper .contact-comp .form form button {
+  .contact-comp-wrapper .contact-comp .content .form form button {
     padding: 0.5rem 1rem;
     font-size: 1rem;
   }
 }
 
-.contact-comp-wrapper .contact-comp .form form button:hover {
+.contact-comp-wrapper .contact-comp .content .form form button:hover {
   background-color: black;
 }
 
-.contact-comp-wrapper .contact-comp .maps {
-  margin-top: -30rem;
-  width: 70%;
+.contact-comp-wrapper .contact-comp .content .maps {
+  width: 48%;
   z-index: 5;
 }
 
 @media (max-width: 900px) {
-  .contact-comp-wrapper .contact-comp .maps {
+  .contact-comp-wrapper .contact-comp .content .maps {
     margin-top: 2rem;
     width: 100%;
   }
 }
 
-.contact-comp-wrapper .contact-comp .maps iframe {
+.contact-comp-wrapper .contact-comp .content .maps iframe {
   width: 100%;
-  min-height: 38rem;
+  min-height: 35rem;
 }
 
 @media (max-width: 900px) {
-  .contact-comp-wrapper .contact-comp .maps iframe {
+  .contact-comp-wrapper .contact-comp .content .maps iframe {
     min-height: 28rem;
   }
 }
