--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -109,8 +109,9 @@
 
         &:hover {
           transform: translateY(-7px);
-          // box-shadow: 0px 0px 10px 0px $main;
-          background-color: black;
+          // box-shadow: 0px 0px 10px 0px white;
+          background-color: white;
+          color: $main;
         }
       }
     }
