--- a/src/Common/Navbar/Navbar.scss
+++ b/src/Common/Navbar/Navbar.scss
@@ -28,6 +28,7 @@
 
     .logo {
       width: 8rem;
+      height: 5rem;
       transition: all ease 0.5s;
       @media (max-width: 1000px) {
         width: 4rem;
