--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -56,7 +56,7 @@
 
   .main-banner {
     display: flex;
-    align-items: center;
+    // align-items: center;
     gap: 3rem;
     @media (max-width: 1000px) {
       flex-direction: column;
@@ -87,9 +87,18 @@
           font-size: 1.5rem;
         }
       }
+
+      .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
       h3 {
         font-size: 1.4rem;
         font-weight: 400;
+        span {
+          font-size: 2.5rem;
+        }
         @media (max-width: 500px) {
           font-size: 1rem;
         }
