--- a/src/Pages/Owner/Owner.css
+++ b/src/Pages/Owner/Owner.css
@@ -106,6 +106,20 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 500px) {
+  .main-banner-wrappe .main-banner .main-content .buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    gap: 1rem;
+  }
 }
 
 .main-banner-wrappe .main-banner .main-content h3 {
@@ -133,6 +147,7 @@ img {
       align-self: flex-start;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  text-align: center;
 }
 
 @media (max-width: 500px) {
