--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -92,6 +92,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        margin-bottom: 1rem;
+        @media (max-width: 500px) {
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 1rem;
+        }
       }
       h3 {
         font-size: 1.4rem;
@@ -111,6 +117,7 @@
         font-weight: 500;
         align-self: flex-start;
         transition: all 0.5s ease;
+        text-align: center;
 
         @media (max-width: 500px) {
           font-size: 0.9rem;
